add LogIn & Register page

--- a/chat_Application/index.html
+++ b/chat_Application/index.html
@@ -27,7 +27,9 @@
   src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
   crossorigin></script>
 
-<script>var Alert = ReactBootstrap.Alert;</script>
+  <script type="module" src="/src/main.jsx"></script>
+
+<!-- <script>var Alert = ReactBootstrap.Alert;</script> -->
 
     
   </body>
